examples/test/testpolicy17240.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17240
  namespace: namespace353
spec:
  podSelector:
    matchLabels:
      key15: value8
      key22: value47
      key27: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value48
          key38: value40
          key21: value46
